fix long ass project images on mobile

--- a/app.css
+++ b/app.css
@@ -170,6 +170,7 @@ h1 {
 @media screen and (max-width: 600px) {
   .project-image {
     height: 200px;
+    width: 100%;
   }
 }
 
